--- a/Zeus/ViewControllers/客户/EditClientVC.storyboard
+++ b/Zeus/ViewControllers/客户/EditClientVC.storyboard
@@ -28,20 +28,28 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oxy-bD-HRA">
                                                     <rect key="frame" x="15" y="0.0" width="345" height="89.5"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1K6-a9-OHJ">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jAi-pi-iJB">
                                                             <rect key="frame" x="15" y="15" width="60" height="60"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="60" id="k7C-HN-gCA"/>
-                                                                <constraint firstAttribute="width" constant="60" id="luw-8f-XtH"/>
+                                                                <constraint firstAttribute="height" constant="60" id="2C3-Mh-PEH"/>
+                                                                <constraint firstAttribute="width" constant="60" id="zAH-ow-Spt"/>
                                                             </constraints>
-                                                        </imageView>
+                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                            <state key="normal" title="头像">
+                                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            </state>
+                                                            <connections>
+                                                                <action selector="avatar_Touch:" destination="h5z-Zd-f7B" eventType="touchUpInside" id="U5E-20-IMn"/>
+                                                            </connections>
+                                                        </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAx-6q-Btg">
                                                             <rect key="frame" x="85" y="15" width="28" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="医院" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14f-w8-Vl7">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="医院" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14f-w8-Vl7">
                                                             <rect key="frame" x="85" y="58" width="28" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -58,14 +66,12 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
+                                                        <constraint firstItem="cAx-6q-Btg" firstAttribute="leading" secondItem="jAi-pi-iJB" secondAttribute="trailing" constant="10" id="1co-oJ-aHq"/>
                                                         <constraint firstItem="j5i-yu-S2I" firstAttribute="centerY" secondItem="cAx-6q-Btg" secondAttribute="centerY" id="5Yw-Zv-xjh"/>
-                                                        <constraint firstItem="1K6-a9-OHJ" firstAttribute="centerY" secondItem="Oxy-bD-HRA" secondAttribute="centerY" id="7X4-Nu-NDe"/>
-                                                        <constraint firstItem="1K6-a9-OHJ" firstAttribute="leading" secondItem="Oxy-bD-HRA" secondAttribute="leading" constant="15" id="9fR-Tm-6Lb"/>
                                                         <constraint firstItem="j5i-yu-S2I" firstAttribute="leading" secondItem="cAx-6q-Btg" secondAttribute="trailing" constant="5" id="FZn-gJ-M6L"/>
-                                                        <constraint firstItem="cAx-6q-Btg" firstAttribute="top" secondItem="1K6-a9-OHJ" secondAttribute="top" id="QZL-sC-z1v"/>
-                                                        <constraint firstItem="14f-w8-Vl7" firstAttribute="bottom" secondItem="1K6-a9-OHJ" secondAttribute="bottom" id="ah5-1X-Rlz"/>
-                                                        <constraint firstItem="14f-w8-Vl7" firstAttribute="leading" secondItem="1K6-a9-OHJ" secondAttribute="trailing" constant="10" id="exy-FO-190"/>
-                                                        <constraint firstItem="cAx-6q-Btg" firstAttribute="leading" secondItem="1K6-a9-OHJ" secondAttribute="trailing" constant="10" id="idx-Uh-xj3"/>
+                                                        <constraint firstItem="jAi-pi-iJB" firstAttribute="centerY" secondItem="Oxy-bD-HRA" secondAttribute="centerY" id="XQd-fT-E38"/>
+                                                        <constraint firstItem="cAx-6q-Btg" firstAttribute="top" secondItem="jAi-pi-iJB" secondAttribute="top" id="epf-sm-YGt"/>
+                                                        <constraint firstItem="jAi-pi-iJB" firstAttribute="leading" secondItem="Oxy-bD-HRA" secondAttribute="leading" constant="15" id="tfH-op-9h0"/>
                                                         <constraint firstAttribute="trailing" secondItem="j5i-yu-S2I" secondAttribute="trailing" id="wbp-0a-hyU"/>
                                                     </constraints>
                                                 </view>
@@ -612,6 +618,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="avatarButton" destination="jAi-pi-iJB" id="sl8-x5-FZv"/>
                         <outlet property="editButton" destination="bIk-OG-IPM" id="WAB-Wv-Lyd"/>
                         <outlet property="nameTxtField" destination="j5i-yu-S2I" id="Ggc-av-LL2"/>
                     </connections>
