--- a/Zeus/ViewControllers/客户/EditClientVC.storyboard
+++ b/Zeus/ViewControllers/客户/EditClientVC.storyboard
@@ -49,7 +49,7 @@
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="医院" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14f-w8-Vl7">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="医院" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14f-w8-Vl7">
                                                             <rect key="frame" x="85" y="58" width="28" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -63,16 +63,34 @@
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits"/>
                                                         </textField>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wK9-Jq-x2N">
+                                                            <rect key="frame" x="118" y="44" width="219" height="44"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="44" id="Ql0-wA-NKr"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                            <state key="normal" title="请输入">
+                                                                <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                            </state>
+                                                            <connections>
+                                                                <action selector="hospital_Touch:" destination="h5z-Zd-f7B" eventType="touchUpInside" id="bYo-6Z-M3Y"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstItem="cAx-6q-Btg" firstAttribute="leading" secondItem="jAi-pi-iJB" secondAttribute="trailing" constant="10" id="1co-oJ-aHq"/>
                                                         <constraint firstItem="j5i-yu-S2I" firstAttribute="centerY" secondItem="cAx-6q-Btg" secondAttribute="centerY" id="5Yw-Zv-xjh"/>
                                                         <constraint firstItem="j5i-yu-S2I" firstAttribute="leading" secondItem="cAx-6q-Btg" secondAttribute="trailing" constant="5" id="FZn-gJ-M6L"/>
+                                                        <constraint firstItem="14f-w8-Vl7" firstAttribute="leading" secondItem="jAi-pi-iJB" secondAttribute="trailing" constant="10" id="GhY-U0-Lem"/>
+                                                        <constraint firstItem="wK9-Jq-x2N" firstAttribute="leading" secondItem="14f-w8-Vl7" secondAttribute="trailing" constant="5" id="HfJ-5t-TQ0"/>
                                                         <constraint firstItem="jAi-pi-iJB" firstAttribute="centerY" secondItem="Oxy-bD-HRA" secondAttribute="centerY" id="XQd-fT-E38"/>
+                                                        <constraint firstItem="wK9-Jq-x2N" firstAttribute="centerY" secondItem="14f-w8-Vl7" secondAttribute="centerY" id="ZqS-MJ-Kor"/>
+                                                        <constraint firstAttribute="trailing" secondItem="wK9-Jq-x2N" secondAttribute="trailing" constant="8" id="bTz-TX-Noj"/>
                                                         <constraint firstItem="cAx-6q-Btg" firstAttribute="top" secondItem="jAi-pi-iJB" secondAttribute="top" id="epf-sm-YGt"/>
                                                         <constraint firstItem="jAi-pi-iJB" firstAttribute="leading" secondItem="Oxy-bD-HRA" secondAttribute="leading" constant="15" id="tfH-op-9h0"/>
                                                         <constraint firstAttribute="trailing" secondItem="j5i-yu-S2I" secondAttribute="trailing" id="wbp-0a-hyU"/>
+                                                        <constraint firstItem="14f-w8-Vl7" firstAttribute="bottom" secondItem="jAi-pi-iJB" secondAttribute="bottom" id="xqo-mu-Ym6"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
