--- a/Zeus/ViewControllers/活动/SignClientCell.xib
+++ b/Zeus/ViewControllers/活动/SignClientCell.xib
@@ -17,9 +17,8 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1E-oN-a4b">
                         <rect key="frame" x="15" y="10" width="290" height="134.5"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kUn-2c-e6i">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kUn-2c-e6i" customClass="SignButton" customModule="Zeus" customModuleProvider="target">
                                 <rect key="frame" x="220" y="10" width="60" height="25"/>
-                                <color key="backgroundColor" red="0.33725490200000002" green="0.58039215690000001" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="8TP-uk-krS"/>
                                     <constraint firstAttribute="width" constant="60" id="GHh-f9-A5f"/>
@@ -48,10 +47,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M5d-em-bqd" customClass="SeprateView" customModule="Zeus" customModuleProvider="target">
-                                <rect key="frame" x="10" y="39" width="270" height="0.5"/>
+                                <rect key="frame" x="10" y="39.5" width="270" height="0.5"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="IjW-Zg-J0q"/>
+                                    <constraint firstAttribute="height" priority="250" id="IjW-Zg-J0q"/>
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Yg-fM-tX8">
@@ -91,7 +90,10 @@
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-            <point key="canvasLocation" x="244" y="210.5"/>
+            <connections>
+                <outlet property="signButton" destination="kUn-2c-e6i" id="YHu-X8-vXp"/>
+            </connections>
+            <point key="canvasLocation" x="242" y="212.5"/>
         </tableViewCell>
     </objects>
 </document>
