--- a/Zeus/ViewControllers/活动/AllocationViewController.storyboard
+++ b/Zeus/ViewControllers/活动/AllocationViewController.storyboard
@@ -90,6 +90,9 @@
                                 <constraint firstAttribute="height" constant="50" id="h9X-FP-dUD"/>
                             </constraints>
                             <state key="normal" image="quotaallocation_addbutton"/>
+                            <connections>
+                                <action selector="addMember_Touch:" destination="8U1-Rr-QqE" eventType="touchUpInside" id="ceh-14-Kzx"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
