客户邀请-选择客户

--- a/Zeus/ViewControllers/活动/ClientInviteCell.xib
+++ b/Zeus/ViewControllers/活动/ClientInviteCell.xib
@@ -40,7 +40,7 @@
                                 <rect key="frame" x="20" y="90" width="250" height="1"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="CvV-e4-vlm"/>
+                                    <constraint firstAttribute="height" priority="250" constant="1" id="CvV-e4-vlm"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-05-01 12:40" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WH7-Jf-b0b">
